# roboquote

./: .gitignore  Dockerfile  LICENCE  Makefile  README.md  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  style.yml
doc/: handpicked_picture_informations_schema.json
doc/deployment/: docker-compose.yml
doc/examples/: update_examples.sh
inspirational_quotes_generator/: config.py  picture.py  quote.py
inspirational_quotes_generator/helpers/: pillow_text.py
pictures/mountain/: 1.json  2.json
pictures/sea/: 1.json  2.json
roboquote/: __init__.py  background_image.py  background_picture.py  config.py  constants.py  picture.py  quote.py  quote_text_generation.py  result_image.py  result_picture.py
roboquote/entities/: exceptions.py  generate_options.py  generation_options.py  image_credits.py  large_language_model.py  text_model.py  themes.py
roboquote/helpers/: pillow.py
roboquote/web/: app.py  templates.py
roboquote/web/routes/: generate.py  health.py  index.py
scripts/: check_builtin_backgrounds.sh  update_examples.sh
static/css/: main.css
static/js/: main.js
web_templates/: base.html  index.html
web_templates/components/: error.html  footer.html  form.html  header.html  loading.html  result.html
