[tool.poetry]
name = "roboquote"
version = "0.1.0"
description = "A generator of inspirational quotes"
authors = ["corenting <corenting@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "roboquote"}]

[tool.poetry.dependencies]
python = "^3.10"
environs = "^9.5.0"
gunicorn = "^20.1.0"
jinja2 = "^3.1.2"
loguru = "^0.6.0"
nltk = "^3.8.1"
pillow = "^9.4.0"
requests = "^2.28.1"
starlette = "^0.23.1"
typer = "^0.7.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}

[tool.poetry.dev-dependencies]
black = "*"
mypy = "*"
ruff = "*"
types-requests = "*"

[tool.ruff]
line-length = 88
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
