[tool.poetry]
name = "roboquote"
version = "0.5.0"
description = "A generator of inspirational quotes"
authors = ["corenting <corenting@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "roboquote"}]

[tool.poetry.dependencies]
python = "^3.12"
environs = "^11.0.0"
httpx = "^0.27.0"
jinja2 = "^3.1.4"
loguru = "^0.7.2"
pillow = "^10.3.0"
starlette = "^0.40.0"
typer = "^0.12.4"
uvicorn = {extras = ["standard"], version = "^0.31.0"}

[tool.poetry.dev-dependencies]
pyright = "*"
ruff = "*"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
# Enable pycodestyle (E), Pyflakes (F), ruff rules (RUF),
# flake8-comprehensions (C4), flake8-datetimez (DTZ), isort (I), pep8-naming (N)
# pyupgrade (UP), flake8-async (ASYNC), flake8-bandit (S), perflint (PERF),
# tryceratops (TRY)
select = ["E", "F", "RUF", "C4", "DTZ", "I", "N", "UP", "ASYNC", "S", "PERF", "TRY"]
ignore = [
    "S311",    # Standard pseudo-random generators are not suitable for cryptographic purposes
    "TRY003",  # Avoid specifying long messages outside the exception class
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
